--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,6 +3,9 @@
   {{ if isset .Site.Params "description" }}
     {{ .Site.Params.description | $.Page.RenderString }}
   {{ end }}
+  {{ if .Site.Params.showSubscribe }}
+    {{ partial "subscribe.html" . }}
+  {{ end }}
   {{ if isset .Site.Params "social" }}
       <p>Find me on
       {{ $length := (len .Site.Params.social) }}
