feat(posts): optional author display and preserve author casing; docs: rebrand theme and expand configuration docs
- Gate author rendering behind params.showAuthor (default false)\n- Remove uppercase transform to preserve original author casing\n- Rebrand README to personal fork and example site\n- Update install URL to dtour repo\n- Add docs for logo/favicon, homepage subscribe block, mainSections, post metadata (author, dateFormat, read time, updated), and RSS\n- Remove outdated TODOs

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -13,8 +13,9 @@
         </h1>
 
         <div class="meta">
-          {{- if (or .Site.Author .Site.Title) -}}
-          <span class="author" itemprop="author" itemscope itemtype="http://schema.org/Person">
+          {{ $showAuthor := .Site.Params.showAuthor | default false }}
+          {{ if (and $showAuthor (or .Site.Author .Site.Title))}}
+          <div class="author" itemprop="author" itemscope itemtype="http://schema.org/Person">
             <span itemprop="name">
               {{- if .Site.Author -}}
               {{ .Site.Author }}
@@ -22,7 +23,7 @@
               {{ .Site.Title }}
               {{- end -}}
             </span>
-          </span>
+          </div>
           {{- end -}}
 
           <div class="postdate">
